段位・東西でソート可能に

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
         lists.forEach(list => {
           new Sortable(list, {
             animation: 150,
-            ghostClass: 'sortable-ghost'
+            ghostClass: 'sortable-ghost',
+            group: 'all-lists',
           });
         });
       }
